# litchconsulting

./: .gitignore  CLAUDE.md  README.md  skills-lock.json
backend/: .gitignore  README.md  pyproject.toml
backend/deploy/: RUNBOOK.md  backup.sh  litchai-api.service  litchai-backup.service  litchai-backup.timer  litchai-heartbeat.service  litchai-heartbeat.timer  litchai-worker.service
backend/fixtures/synthetic/: annual_report_ias1_basic.json  annual_report_ifrs18_basic.json  ar_ap_aging_debtors.json  bank_rec_balanced.json  bank_rec_unbalanced.json  cac_tracker_basic.json  cashflow_basic.json  cashflow_service.json  cit_small.json  cit_standard.json  ledger_basic.json  ledger_messy.json  payroll_basic.json  payroll_single.json  pnl_anomaly.json  pnl_basic.json  pnl_messy.json  pnl_service.json  statement_of_affairs_balanced.json  statement_of_affairs_unbalanced.json  vat_return_basic.json  vat_return_credit.json  wht_schedule_balanced.json  wht_schedule_gap.json
backend/src/litchai/: api.py  crypto.py  embeddings.py  fixtures_gen.py  knowledge.py  pipeline.py  queue.py  sanitize.py  scanning.py  seed.py  storage.py  taxconfig.py
backend/src/litchai/ai/: __init__.py  assistant.py  cache.py  harness.py  pg.py  provider.py  selection.py  tasks.py
backend/src/litchai/categorize/: __init__.py  eval.py  ladder.py  llm.py  memory_store.py  normalize.py  pg_memory.py  reports.py  retrieval.py  transfers.py
backend/src/litchai/compilers/: _common.py  ar_ap_aging.py  bank_rec.py  cac_tracker.py  cashflow.py  cit.py  ledger.py  pnl.py  (+4 more)
backend/tests/: annual_report_helpers.py  test_ai_harness.py  test_annual_report_ias1.py  test_annual_report_ifrs18.py  test_api_queue.py  test_ar_ap_aging_compiler.py  test_assistant_chat.py  test_bank_rec_compiler.py  test_cac_tracker_compiler.py  test_cashflow_compiler.py  test_categorize_ladder.py  test_cit_compiler.py  test_compile_engagement.py  test_crypto.py  test_document_state.py  test_documents_api.py  test_engagement_lifecycle.py  test_extraction.py  test_fixtures_gen.py  test_knowledge.py  test_ledger_compiler.py  test_mapping.py  test_normalize.py  test_ops.py  test_payroll_compiler.py  test_pipeline.py  test_pnl_compiler.py  test_recompute_multisheet.py  test_repository.py  test_result_xlsx_api.py  test_review_facts.py  test_review_phase4.py  test_sanitize.py  test_seed.py  test_statement_of_affairs_compiler.py  test_sweep.py  test_taxconfig.py  test_taxonomy.py  test_vat_compiler.py  test_wht_compiler.py
(+536 files in other folders)
