[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "litchai"
version = "0.1.0"
description = "LitchAI — deterministic financial-template compiler pipeline (see plans/prd.md)"
requires-python = ">=3.11"
dependencies = [
  "openpyxl>=3.1",
  "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
