[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "litchai"
version = "0.1.0"
description = "LitchAI — deterministic financial-template compiler pipeline (see plans/prd.md)"
requires-python = ">=3.11"
dependencies = [
  "openpyxl>=3.1",
  "pydantic>=2.7",
  "fastapi>=0.115",
  "procrastinate>=3.0",
  "psycopg[binary]>=3.1",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.4",
  "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"litchai.taxonomy" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
