[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "litchai"
version = "0.1.0"
description = "LitchAI — deterministic financial-template compiler pipeline (see plans/prd.md)"
requires-python = ">=3.11"
dependencies = [
  "openpyxl>=3.1",
  "pydantic>=2.7",
  "fastapi>=0.115",
  "procrastinate>=3.0",
  "psycopg[binary]>=3.1",
  "uvicorn>=0.30",
  "cryptography>=42",   # blind-relay envelope decrypt (PRD §12.6)
  "httpx>=0.27",        # Ollama provider/embedder client (Phase 3 AI harness)
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.4",
  "httpx>=0.27",
]
# VM-only ingestion deps (heavy / native); installed on the OCI box, not needed
# for the pure-Python test suite that runs everywhere else.
vm = [
  "clamd>=1.0",         # ClamAV INSTREAM malware scan (FR1)
  "docling>=2.0",       # layout-aware OCR + table extraction (Phase 2b)
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"litchai.taxonomy" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
